--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,15 +8,14 @@
       <i class="devicon-html5-plain-wordmark"></i>
       <i class="devicon-bootstrap-plain-wordmark colored"></i>
       <i class="devicon-sass-original colored"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <p>While working on projects I use structured HTML5 tags alongside with BEM naming convention. Use OOP programming and scripting languages</p>
     </div>
     <div class="tech">
       <h2>Code</h2>
       <i class="devicon-javascript-plain colored"></i>
       <i class="devicon-react-original-wordmark colored"></i>
       <i class="devicon-nodejs-plain-wordmark"></i>
-      <i class="devicon-vuejs-plain"></i>
+      <i class="devicon-vuejs-line"></i>
       <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
         Vinyl XOXO lumbersexual</p>
     </div>
