--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,16 +1,18 @@
 <div class="user-details">
   <h1> Featured Projects </h1>
+  <p>While working in Practicum by Yandex I have developed 4 projects solo and together with a team. Implemented UI using HTML5, CSS, SCSS and Vanilla Javascript - Wrote integration tests using Selenium (WebdriverIO) and Mocha
+  </p>
 </div>
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="cancer is treatable" src="{{ "/assets/img/raklechitsa.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Project Title </h3>
+    <h3> Cancer is treatable </h3>
     <ul>
-      <li> Featured Skills</li>
+      <li> Used technologies: Vue.js, Nuxt.js, Git, Prettier, Strapi as a CMS tool </li>
     </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <p>Building a clone website for the non-profit organization about inspiring stories of people who has defeated cancer.</p>
     <a class="project-link" href="#">Check it out</a>
   </div>
 </div>
