more changes to the project

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -21,11 +21,24 @@
     <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
-    <h3> Project Title </h3>
+    <h3> Place </h3>
     <ul>
-      <li> Featured Skills</li>
+      <li>Used technologies: HTML5, CSS, Vanilla JavaScript, REST, Git</li>
     </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <p>A user blog to upload favorite places with images and names to save the best life moments. The user can edit his name and occupation, as well as add new places as he explores the world. Documented bug reports and had a pair check code review for further improvements.</p>
+    <a class="project-link" href="#">Check it out</a>
+  </div>
+</div>
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="cancer is treatable" src="{{ "/assets/img/raklechitsa.png" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> Cancer is treatable </h3>
+    <ul>
+      <li> Used technologies: Vue.js, Nuxt.js, Git, Prettier, Strapi as a CMS tool </li>
+    </ul>
+    <p>Building a clone website for the non-profit organization about inspiring stories of people who has defeated cancer.</p>
     <a class="project-link" href="#">Check it out</a>
   </div>
 </div>
