adjusted skills description

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -16,15 +16,13 @@
       <i class="devicon-react-original-wordmark colored"></i>
       <i class="devicon-nodejs-plain-wordmark"></i>
       <i class="devicon-vuejs-line"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <p>I always try to be at the forefront in the latest technologies, including frameworks Vue.js and React. </p>
     </div>
     <div class="tech">
       <h2>Tools</h2>
       <i class="devicon-git-plain"></i>
       <i class="devicon-webpack-plain colored"></i>
       <i class="devicon-webstorm-plain"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <p>I'm using GitHub to store my projects, and I also set configure files using Webpack. I like coding both in Webstorm and Visual Studio Code.</p>
     </div>
 </div>
