--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -34,7 +34,7 @@
     <img alt="cancer is treatable" src="{{ "/assets/img/raklechitsa.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Cancer is treatable </h3>
+    <h3> Traveling around Russia </h3>
     <ul>
       <li> Used technologies: Vue.js, Nuxt.js, Git, Prettier, Strapi as a CMS tool </li>
     </ul>
