--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -18,7 +18,7 @@
 </div>
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
+    <img alt="snapshot of the website" src="{{ "/assets/img/place.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3> Place </h3>
@@ -26,19 +26,19 @@
       <li>Used technologies: HTML5, CSS, Vanilla JavaScript, REST, Git</li>
     </ul>
     <p>A user blog to upload favorite places with images and names to save the best life moments. The user can edit his name and occupation, as well as add new places as he explores the world. Documented bug reports and had a pair check code review for further improvements.</p>
-    <a class="project-link" href="#">Check it out</a>
+    <a class="project-link" href="http://place-shareyouspot.surge.sh">Check it out</a>
   </div>
 </div>
 <div class="user-projects">
   <div class="images-right">
-    <img alt="cancer is treatable" src="{{ "/assets/img/raklechitsa.png" | prepend: site.baseurl }}" />
+    <img alt="cancer is treatable" src="{{ "/assets/img/place.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Traveling around Russia </h3>
+    <h3> Traveling</h3>
     <ul>
       <li> Used technologies: Vue.js, Nuxt.js, Git, Prettier, Strapi as a CMS tool </li>
     </ul>
-    <p>Building a clone website for the non-profit organization about inspiring stories of people who has defeated cancer.</p>
+    <p>A traveling guide leading the user to explore more highlights about Russia. Collaborated with designers on implementing responsive design elements on the webpage.</p>
     <a class="project-link" href="#">Check it out</a>
   </div>
 </div>
