--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -15,9 +15,9 @@
   text-align: center;
   font-size: 60px;
   display: flex;
-  flex-direction: row;
+  justify-content: center;
   flex-wrap: wrap;
-  justify-content: space-between;
+
   p {
     font-size: 16px;
   }
