--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -34,11 +34,18 @@
     <img alt="cancer is treatable" src="{{ "/assets/img/place.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Traveling</h3>
-    <ul>
-      <li> Used technologies: Vue.js, Nuxt.js, Git, Prettier, Strapi as a CMS tool </li>
-    </ul>
-    <p>A traveling guide leading the user to explore more highlights about Russia. Collaborated with designers on implementing responsive design elements on the webpage.</p>
-    <a class="project-link" href="#">Check it out</a>
+    <h3> From Portland to Portland </h3>
+    <p>A traveling guide leading the user to explore more highlights about an epic bicycle journey from Portland, ME. to Portland, OR.. Collaborated with designers on implementing responsive design elements on the webpage.</p>
+    <a class="project-link" href="https://from-portland-to-portland.netlify.app">Check it out</a>
+  </div>
+</div>
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="snapshot of the website" src="{{ "/assets/img/Feynman.png" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> Learning How to Learn </h3>
+    <p>An educational landing page with multiple sections about various methods to obtain new skills. Brought mockups to life with the final result of a responsive web page and CSS animation.</p>
+    <a class="project-link" href="https://from-portland-to-portland.netlify.app">Check it out</a>
   </div>
 </div>
