--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -31,7 +31,7 @@
 </div>
 <div class="user-projects">
   <div class="images-right">
-    <img alt="cancer is treatable" src="{{ "/assets/img/place.png" | prepend: site.baseurl }}" />
+    <img alt="cancer is treatable" src="{{ "/assets/img/fromportlandtoportland.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3> From Portland to Portland </h3>
