--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -13,7 +13,7 @@
       <li> Used technologies: Vue.js, Nuxt.js, Git, Prettier, Strapi as a CMS tool </li>
     </ul>
     <p>Building a clone website for the non-profit organization about inspiring stories of people who has defeated cancer.</p>
-    <a class="project-link" href="#">Check it out</a>
+    <a class="project-link" href="https://rak-lechitsa.netlify.app">Check it out</a>
   </div>
 </div>
 <div class="user-projects">
@@ -45,7 +45,7 @@
   </div>
   <div class="contents-right">
     <h3> Learning How to Learn </h3>
-    <p>An educational landing page with multiple sections about various methods to obtain new skills. Brought mockups to life with the final result of a responsive web page and CSS animation.</p>
+    <p>An educational landing page with multiple sections about various methods to obtain new skills. Brought mockups to life with the final result of a web page and CSS animation.</p>
     <a class="project-link" href="https://from-portland-to-portland.netlify.app">Check it out</a>
   </div>
 </div>
