--- a/_includes/about.html
+++ b/_includes/about.html
@@ -14,7 +14,7 @@
       <h2>Code</h2>
       <i class="devicon-javascript-plain colored"></i>
       <i class="devicon-react-original-wordmark colored"></i>
-      <i class="devicon-nodejs-plain-wordmark"></i>
+      <!--<i class="devicon-nodejs-plain-wordmark"></i>-->
       <i class="devicon-vuejs-line"></i>
       <p>I always try to be at the forefront in the latest technologies, including frameworks Vue.js and React. </p>
     </div>
