--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,24 +5,23 @@
   <div class="user">
     <div class="tech">
       <h2>Design</h2>
-      <i class="devicon-html5-plain-wordmark"></i>
+      <i class="devicon-html5-plain-wordmark colored"></i>
       <i class="devicon-bootstrap-plain-wordmark colored"></i>
       <i class="devicon-sass-original colored"></i>
-      <p>While working on projects I use structured HTML5 tags alongside with BEM naming convention. Use OOP programming and scripting languages</p>
+      <p>HTML5, CSS3, Sass, Responsive Web Design, Bootstrap 4</p>
     </div>
     <div class="tech">
       <h2>Code</h2>
       <i class="devicon-javascript-plain colored"></i>
       <i class="devicon-react-original-wordmark colored"></i>
-      <!--<i class="devicon-nodejs-plain-wordmark"></i>-->
-      <i class="devicon-vuejs-line"></i>
-      <p>I always try to be at the forefront in the latest technologies, including frameworks Vue.js and React. </p>
+      <i class="devicon-vuejs-line colored"></i>
+      <p>Javascript, Vue.js, Vuex, Nuxt.js, React, Redux</p>
     </div>
     <div class="tech">
       <h2>Tools</h2>
-      <i class="devicon-git-plain"></i>
+      <i class="devicon-git-plain colored"></i>
       <i class="devicon-webpack-plain colored"></i>
-      <i class="devicon-webstorm-plain"></i>
-      <p>I'm using GitHub to store my projects, and I also set configure files using Webpack. I like coding both in Webstorm and Visual Studio Code.</p>
+      <i class="devicon-webstorm-plain colored"></i>
+      <p>VCS: Github; CI/CD: Netlify; Build tools: Webpack, Parcel; IDE: Webstorm, Visual Studio Code</p>
     </div>
 </div>
