--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,18 +1,20 @@
 <div id="particles-js">
-  <div class="header">
-      <h1>
-        <span class="site-title">{{site.username}}</span>
-        <span class="site-description">{{site.user_title}}</span>
-      </h1>
-      <div class="header-icons">
-        <a aria-label="Send email" href="#"><i class="icon fa fa-envelope"></i></a>
-        <a aria-label="My Google Plus" target="_blank" href="#"><i class="icon fa fa-google-plus" aria-hidden="true"></i></a>
-        <a aria-label="My Github" target="_blank" href="#"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
-      </div>
-      <div class="header-links">
-        <a class="link" href="#about" data-scroll>About Me</a>
-        <a class="link" href="#projects" data-scroll>Projects</a>
-      </div>
-  </div>
-  <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
+    <div class="header">
+        <h1>
+            <span class="site-title">{{site.username}}</span>
+            <span class="site-description">{{site.user_title}}</span>
+        </h1>
+        <div class="header-icons">
+            <a aria-label="Send email" href="mailto:tychkovaam@gmail.com"><i class="icon fa fa-envelope"></i></a>
+            <a aria-label="Send email" href="mailto:tychkovaam@gmail.com"><i class="icon fa fa-linkedin"></i></a>
+            <a aria-label="My Github" target="_blank" href="https://github.com/tychtych"><i
+                    class="icon fa fa-github-alt" aria-hidden="true"></i></a>
+        </div>
+        <div class="header-links">
+            <a class="link" href="#about" data-scroll>About Me</a>
+            <a class="link" href="#projects" data-scroll>Projects</a>
+            <a class="link" href="{{ "/assets/pdf/Anastasiia_Tychkova_CV.pdf" | prepend: site.baseurl }}">CV</a>
+        </div>
+    </div>
+    <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
 </div>
