--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
         </h1>
         <div class="header-icons">
             <a aria-label="Send email" href="mailto:tychkovaam@gmail.com"><i class="icon fa fa-envelope"></i></a>
-            <a aria-label="Send email" href="mailto:tychkovaam@gmail.com"><i class="icon fa fa-linkedin"></i></a>
+            <a aria-label="Send email" href="https://www.linkedin.com/in/anastasiia-tychkova-7b7570112/"><i class="icon fa fa-linkedin"></i></a>
             <a aria-label="My Github" target="_blank" href="https://github.com/tychtych"><i
                     class="icon fa fa-github-alt" aria-hidden="true"></i></a>
         </div>
