--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,6 +1,8 @@
 <div class="user-details">
   <h1> Featured Projects </h1>
-  <p>While working in Practicum by Yandex I have developed 4 projects solo and together with a team. Implemented UI using HTML5, CSS, SCSS and Vanilla Javascript - Wrote integration tests using Selenium (WebdriverIO) and Mocha
+  <p>I am a Junior Front-End Developer with 1 year experience of building eye-catching responsive websites.
+    I really enjoy working both independently and within a team to deliver a quality product. Moreover, I keen on minimalistic and
+    elegant design solutions for users - it satisfies me to see that there is a room for all elements on the website, and they're not crowded.
   </p>
 </div>
 <div class="user-projects">
@@ -10,7 +12,7 @@
   <div class="contents">
     <h3> Cancer is treatable </h3>
     <ul>
-      <li> Used technologies: Vue.js, Nuxt.js, Git, Prettier, Strapi as a CMS tool </li>
+      <li> Used technologies: Vue.js, Nuxt.js, Git, Prettier, Strapi as a CMS tool, Netlify as CI/CD </li>
     </ul>
     <p>Building a clone website for the non-profit organization about inspiring stories of people who has defeated cancer.</p>
     <a class="project-link" href="https://rak-lechitsa.netlify.app">Check it out</a>
@@ -23,7 +25,7 @@
   <div class="contents-right">
     <h3> Place </h3>
     <ul>
-      <li>Used technologies: HTML5, CSS, Vanilla JavaScript, REST, Git</li>
+      <li>Used technologies: HTML5, CSS, Vanilla JavaScript, REST API, Git</li>
     </ul>
     <p>A user blog to upload favorite places with images and names to save the best life moments. The user can edit his name and occupation, as well as add new places as he explores the world. Documented bug reports and had a pair check code review for further improvements.</p>
     <a class="project-link" href="http://place-shareyouspot.surge.sh">Check it out</a>
