changed about and project section

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,27 +1,32 @@
- <div class="user-details">
+<div class="user-details">
   <h1> About me </h1>
   <p> {{site.user_description}} </p>
 </div>
-  <div class="user">
-    <div class="tech">
-      <h2>Design</h2>
-      <i class="devicon-html5-plain-wordmark colored"></i>
-      <i class="devicon-bootstrap-plain-wordmark colored"></i>
-      <i class="devicon-sass-original colored"></i>
-      <p>HTML5, CSS3, Sass, Responsive Web Design, Bootstrap 4</p>
-    </div>
-    <div class="tech">
-      <h2>Code</h2>
-      <i class="devicon-javascript-plain colored"></i>
-      <i class="devicon-react-original-wordmark colored"></i>
-      <i class="devicon-vuejs-line colored"></i>
-      <p>Javascript, Vue.js, Vuex, Nuxt.js, React, Redux</p>
-    </div>
-    <div class="tech">
-      <h2>Tools</h2>
-      <i class="devicon-git-plain colored"></i>
-      <i class="devicon-webpack-plain colored"></i>
-      <i class="devicon-webstorm-plain colored"></i>
-      <p>VCS: Github; CI/CD: Netlify; Build tools: Webpack, Parcel; IDE: Webstorm, Visual Studio Code</p>
-    </div>
+<div class="user">
+  <div class="tech">
+    <h2>Design</h2>
+    <i class="devicon-html5-plain-wordmark colored"></i>
+    <i class="devicon-bootstrap-plain-wordmark colored"></i>
+    <i class="devicon-sass-original colored"></i>
+    <p>HTML5, CSS3, Sass, Responsive Web Design, Bootstrap 4, Figma, Adobe Photoshop, Adobe XD</p>
+  </div>
+  <div class="tech">
+    <h2>Code</h2>
+    <i class="devicon-javascript-plain colored"></i>
+    <i class="devicon-react-original-wordmark colored"></i>
+    <i class="devicon-vuejs-line colored"></i>
+    <p>Javascript, Vue.js, Vuex, Nuxt.js, React, Redux</p>
+  </div>
+  <div class="tech">
+    <h2>Cloud</h2>
+    <i class="devicon-amazonwebservices-plain-wordmark colored"></i>
+    <p>EC2, Cognito, S3 Bucket, Amplify</p>
+  </div>
+  <div class="tech">
+    <h2>Tools</h2>
+    <i class="devicon-git-plain colored"></i>
+    <i class="devicon-webpack-plain colored"></i>
+    <i class="devicon-webstorm-plain colored"></i>
+    <p>VCS: Github; CI/CD: Netlify; Build tools: Webpack, Parcel; IDE: Webstorm, Visual Studio Code</p>
+  </div>
 </div>
