--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,15 +3,12 @@
 </div>
 <div class="user-projects">
   <div class="images-right">
-    <img alt="cancer is treatable" src="{{ "/assets/img/raklechitsa.png" | prepend: site.baseurl }}" />
+    <img alt="Image with landscape photo" src="{{ "/assets/img/fromportlandtoportland.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Cancer is treatable </h3>
-    <ul>
-      <li> Used technologies: Vue.js, Nuxt.js, Git, Prettier, Strapi as a CMS tool, Netlify as CI/CD </li>
-    </ul>
-    <p>Building a clone website for the non-profit organization about inspiring stories of people who has defeated cancer.</p>
-    <a class="project-link" href="https://rak-lechitsa.netlify.app">Check it out</a>
+    <h3> From Portland to Portland </h3>
+    <p>A traveling guide leading the user to explore more highlights about an epic bicycle journey from Portland, ME. to Portland, OR.. Collaborated with designers on implementing responsive design elements on the webpage.</p>
+    <a class="project-link" href="https://from-portland-to-portland.netlify.app">Check it out</a>
   </div>
 </div>
 <div class="user-projects">
@@ -29,12 +26,15 @@
 </div>
 <div class="user-projects">
   <div class="images-right">
-    <img alt="cancer is treatable" src="{{ "/assets/img/fromportlandtoportland.png" | prepend: site.baseurl }}" />
+    <img alt="cancer is treatable" src="{{ "/assets/img/raklechitsa.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> From Portland to Portland </h3>
-    <p>A traveling guide leading the user to explore more highlights about an epic bicycle journey from Portland, ME. to Portland, OR.. Collaborated with designers on implementing responsive design elements on the webpage.</p>
-    <a class="project-link" href="https://from-portland-to-portland.netlify.app">Check it out</a>
+    <h3> Cancer is treatable </h3>
+    <ul>
+      <li> Used technologies: Vue.js, Nuxt.js, Git, Prettier, Strapi as a CMS tool, Netlify as CI/CD </li>
+    </ul>
+    <p>Building a clone website for the non-profit organization about inspiring stories of people who has defeated cancer.</p>
+    <a class="project-link" href="https://rak-lechitsa.netlify.app">Check it out</a>
   </div>
 </div>
 <div class="user-projects">
@@ -44,6 +44,6 @@
   <div class="contents-right">
     <h3> Learning How to Learn </h3>
     <p>An educational landing page with multiple sections about various methods to obtain new skills. Brought mockups to life with the final result of a web page and CSS animation.</p>
-    <a class="project-link" href="https://from-portland-to-portland.netlify.app">Check it out</a>
+    <a class="project-link" href="https://lerning-to-learn.netlify.app">Check it out</a>
   </div>
 </div>
