added info about sanomind

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -20,7 +20,7 @@
   <div class="tech">
     <h2>Cloud</h2>
     <i class="devicon-amazonwebservices-plain-wordmark colored"></i>
-    <p>EC2, Cognito, S3 Bucket, Amplify</p>
+    <p>AWS: EC2, Cognito, S3 Bucket, Amplify</p>
   </div>
   <div class="tech">
     <h2>Tools</h2>
