--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -2,6 +2,19 @@
   <h1> Featured Projects </h1>
 </div>
 <div class="user-projects">
+  <div class="images-left">
+    <img alt="snapshot of the website" src="{{ "/assets/img/sanomind.png" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> Sanomind </h3>
+    <ul>
+      <li>Used technologies: Vue.js, Vuex, Vue Boostrap, AWS EC2, RDS, API Getaway, Route 53, AWS Cognito, AWS S3, AWS Amplify Console, Github.</li>
+    </ul>
+    <p> Sanomind is a mental health wellness creator platform. All content is created by licensed counselors, therapists and psychologists. We call them our experts. Whether you’re looking for a little self-help or therapy, your journey starts here. </p>
+    <a class="project-link" href="https://www.sanomind.com/">Check it out</a>
+  </div>
+</div>
+<div class="user-projects">
   <div class="images-right">
     <img alt="Image with landscape photo" src="{{ "/assets/img/fromportlandtoportland.png" | prepend: site.baseurl }}" />
   </div>
