--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -8,7 +8,7 @@
   <div class="contents-right">
     <h3> Sanomind </h3>
     <ul>
-      <li>Used technologies: Vue.js, Vuex, Vue Boostrap, AWS EC2, RDS, API Getaway, Route 53, AWS Cognito, AWS S3, AWS Amplify Console, Github.</li>
+      <li>Used technologies: Next.js, React, AWS EC2, RDS, API Getaway, Route 53, AWS Cognito, AWS S3, AWS Amplify Console, Github.</li>
     </ul>
     <p> Sanomind is a mental health wellness creator platform. All content is created by licensed counselors, therapists and psychologists. We call them our experts. Whether you’re looking for a little self-help or therapy, your journey starts here. </p>
     <a class="project-link" href="https://www.sanomind.com/">Check it out</a>
