added newssearch app description

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -2,6 +2,17 @@
   <h1> Featured Projects </h1>
 </div>
 <div class="user-projects">
+  <div class="images-right">
+    <img alt="Image with landscape photo" src="{{ "/assets/img/newssearch.png" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> News Explorer </h3>
+    <p> A full-stack news searching app where the user can search news, create the account and save news in his account.
+      Used technologies Front-end: JavaScript, HTML5, CSS; Used technologies Back-end: AWS EC2, AWS ALB, Node.js, Express, MongoDB, Mongoose, Celebrate/Joi. </p>
+    <a class="project-link" href="https://tychtych.github.io/news-search-frontend">Check it out</a>
+  </div>
+</div>
+<div class="user-projects">
   <div class="images-left">
     <img alt="snapshot of the website" src="{{ "/assets/img/sanomind.png" | prepend: site.baseurl }}" />
   </div>
